--- a/config/locales/controllers/admin/tr.yml
+++ b/config/locales/controllers/admin/tr.yml
@@ -2,151 +2,151 @@
 tr:
   admin:
     articles_controller:
-      saved: Makale kaydedildi!
-      pinned: Makale Sabitlendi!
-      unpinned: Makale Sabitleme Kaldırıldı!
+      saved: Article saved!
+      pinned: Article Pinned!
+      unpinned: Article Unpinned!
     badge_achievements_controller:
-      deleted: Rozet başarısı silindi!
-      rewarded: Rozetler ödüllendiriliyor. Görev kısa süre içinde tamamlanacak.
-      congrats: Tebrikler!
-      award: Ödüllendirmek için bir rozet seçin
-      wrong: Bir şeyler ters gitti.
+      deleted: Badge achievement has been deleted!
+      rewarded: Badges are being rewarded. The task will finish shortly.
+      congrats: Congrats!
+      award: Please choose a badge to award
+      wrong: Something went wrong.
     badges_controller:
-      created: Rozet oluşturuldu!
-      updated: Rozet güncellendi!
+      created: Badge has been created!
+      updated: Badge has been updated!
     broadcasts_controller:
-      created: Yayın oluşturuldu!
-      deleted: Yayın silindi!
-      updated: Yayın güncellendi!
-      wrong: Yayını silmeyle ilgili bir şeyler ters gitti.
+      created: Broadcast has been created!
+      deleted: Broadcast has been deleted!
+      updated: Broadcast has been updated!
+      wrong: Something went wrong with deleting the broadcast.
     consumer_apps_controller:
-      created: '%{app} oluşturuldu!'
-      deleted: '%{app} silindi!'
-      updated: '%{app} güncellendi!'
-      wrong: '%{app} silmeyle ilgili bir şeyler ters gitti'.
+      created: '%{app} has been created!'
+      deleted: '%{app} has been deleted!'
+      updated: '%{app} has been updated!'
+      wrong: Something went wrong with deleting %{app}.
     display_ads_controller:
-      created: Görüntüleme Reklamı oluşturuldu!
-      deleted: Görüntüleme Reklamı silindi!
-      updated: Görüntüleme Reklamı güncellendi!
-      wrong: Görüntüleme Reklamını silmeyle ilgili bir şeyler ters gitti.
+      created: Display Ad has been created!
+      deleted: Display Ad has been deleted!
+      updated: Display Ad has been updated!
+      wrong: Something went wrong with deleting the Display Ad.
     gdpr_delete_requests_controller:
-      deleted: Başarıyla silindi olarak işaretlendi
+      deleted: Successfully marked as deleted
     extensions_controller:
-      update_success: Uzantılar güncellendi.
+      update_success: Extensions have been updated.
     html_variants_controller:
       fork: '%{name} FORK-%{rand}'
-      created: HTML Varyantı oluşturuldu!
-      deleted: HTML Varyantı silindi!
-      updated: HTML Varyantı güncellendi!
-      wrong: HTML Varyantını silmeyle ilgili bir şeyler ters gitti.
+      created: HTML Variant has been created!
+      deleted: HTML Variant has been deleted!
+      updated: HTML Variant has been updated!
+      wrong: Something went wrong with deleting the HTML Variant.
     invitations_controller:
-      duplicate: 'Davetiye gönderilmedi. Zaten %{email} e-postası olan kayıtlı bir kullanıcı var.'
-      create_success: Davetiye, kullanıcının e-postasına gönderildi.
-      destroy_success: '%{email} için davet iptal edildi.'
-      resend_success: '%{email} adresine davetiye yeniden gönderildi.'
+      duplicate: 'Invitation was not sent. There is already a registered user with the email: %{email}'
+      create_success: The invite has been sent to the user's email.
+      destroy_success: Invite cancelled for %{email}.
+      resend_success: Invite resent to %{email}.
     listing_categories_controller:
-      created: Liste Kategorisi oluşturuldu!
-      updated: Liste Kategorisi güncellendi!
-      deleted: Liste Kategorisi silindi!
+      created: Listing Category has been created!
+      updated: Listing Category has been updated!
+      deleted: Listing Category has been deleted!
     listings_controller:
-      updated: Liste başarıyla güncellendi
-      destroyed: "'%{title}' başarıyla yok edildi"
-      no_credit: Yeterli kredi yok
+      updated: Listing updated successfully
+      destroyed: "'%{title}' was destroyed successfully"
+      no_credit: Not enough available credits
     mods_controller:
-      trusted: '%{username} artık Güvenilir bir role sahip!'
+      trusted: '%{username} now has a Trusted role!'
     navigation_links_controller:
-      deleted: Navigasyon Bağlantısı %{link} silindi
-      created: 'Başarıyla oluşturulan navigasyon bağlantısı: %{link}'
-      updated: 'Başarıyla güncellenen navigasyon bağlantısı: %{link}'
+      deleted: Navigation Link %{link} deleted
+      created: 'Successfully created navigation link: %{link}'
+      updated: 'Successfully updated navigation link: %{link}'
     organization_memberships_controller:
-      not_exist: 'Organizasyasyon #%{org_id} mevcut değil.'
-      wrong: Kullanıcının %{org} organizasyonundan kaldırılmasıyla ilgili bir şeyler ters gitti.
-      added: Kullanıcı başarıyla %{org} organizasyonuna eklendi.
-      removed: Kullanıcı başarıyla %{org} organizasyonundan kaldırıldı.
-      updated: Kullanıcı başarıyla %{type} olarak güncellendi.
+      not_exist: 'Organization #%{org_id} does not exist.'
+      wrong: Something went wrong with removing the user from %{org}
+      added: User was successfully added to %{org}
+      removed: User was successfully removed from %{org}
+      updated: User was successfully updated to %{type}
     organizations_controller:
-      credit_updated: Krediler başarıyla güncellendi.
+      credit_updated: Successfully updated credits
     pages_controller:
-      updated: Sayfa başarıyla güncellendi.
-      created: Sayfa başarıyla oluşturuldu.
-      deleted: Sayfa başarıyla silindi.
+      updated: Page has been successfully updated.
+      created: Page has been successfully created.
+      deleted: Page has been successfully deleted.
       code_of_conduct:
-        title: Davranış Kuralları
-        description: Bu platformda nasıl davranılması gerektiğini açıklayan bir sayfa
+        title: Code of Conduct
+        description: A page that describes how to behave on this platform
       privacy_policy:
-        title: Gizlilik Politikası
-        description: Gizlilik politikasını açıklayan bir sayfa
+        title: Privacy Policy
+        description: A page that describes the privacy policy
       terms_of_use:
-        title: Kullanım Şartları
-        description: Uygulamanın kullanım şartlarını açıklayan bir sayfa
+        title: Terms of Use
+        description: A page that describes the terms of use for the application
     podcasts_controller:
-      new_owner_added: Yeni sahip eklendi!
-      no_such_user: Böyle bir kullanıcı yok
-      scheduled: "Podcast'in bölümleri alınması planlandı (%{title}, #%{id})"
-      updated: Podcast güncellendi
+      new_owner_added: New owner added!
+      no_such_user: No such user
+      scheduled: "Podcast's episodes fetching was scheduled (%{title}, #%{id})"
+      updated: Podcast updated
     profile_field_groups_controller:
-      deleted: Grup %{group} silindi
-      updated: Grup %{group} güncellendi
-      created: 'Başarıyla oluşturulan grup: %{group}'
+      deleted: Group %{group} deleted
+      updated: Group %{group} updated
+      created: 'Successfully created group: %{group}'
     profile_fields_controller:
-      created: Profil alanı %{field} oluşturuldu
-      deleted: Profil alanı %{field} silindi
-      updated: Profil alanı %{field} güncellendi
+      created: Profile field %{field} created
+      deleted: Profile field %{field} deleted
+      updated: Profile field %{field} updated
     response_templates_controller:
-      saved: 'Yanıt Şablonu: "%{title}" başarıyla kaydedildi.'
-      updated: Yanıt şablonu "%{title}" güncellendi.
-      deleted: Yanıt şablonu "%{title}" silindi.
+      saved: 'Response Template: "%{title}" saved successfully.'
+      updated: The response template "%{title}" was updated.
+      deleted: The response template "%{title}" was deleted.
     secrets_controller:
-      not_in_vault: Kasada Değil
-      updated: '%{key} anahtarı, Kasada başarıyla güncellendi.'
+      not_in_vault: Not In Vault
+      updated: Secret %{key} was successfully updated in Vault.
       value: '%{first8}******'
     settings_controller:
-      confirmation: Kullanıcı adım @%{username} ve bu işlem %100 güvenli ve uygundur.
+      confirmation: My username is @%{username} and this action is 100% safe and appropriate.
     spaces_controller:
-      update_success: Mekan güncellendi.
+      update_success: Space has been updated.
     tags:
       moderators_controller:
-        not_found: 'Kullanıcı ID #%{user_id} bulunamadı'
-        not_found_or: 'Kullanıcı ID #%{user_id} bulunamadı veya hesaplarında hatalar var: %{errors}'
-        removed: '@%{username} - ID #%{user_id} etiket moderatörü olarak kaldırıldı.'
-        added: '%{username} etiket moderatörü olarak eklendi!'
+        not_found: 'User ID #%{user_id} was not found'
+        not_found_or: 'User ID #%{user_id} was not found, or their account has errors: %{errors}'
+        removed: '@%{username} - ID #%{user_id} was removed as a tag moderator.'
+        added: '%{username} was added as a tag moderator!'
     tags_controller:
-      created: '%{tag_name} oluşturuldu!'
-      updated: '%{tag_name} etiketi başarıyla güncellendi!'
-      update_fail: 'Etiket güncellemesi başarısız oldu: %{errors}'
+      created: '%{tag_name} has been created!'
+      updated: '%{tag_name} tag successfully updated!'
+      update_fail: 'The tag update failed: %{errors}'
     tools_controller:
-      article_busted: 'Makale #%{article} başarıyla düzeltildi'
-      user_busted: 'Kullanıcı #%{user} başarıyla düzeltildi'
-      link_busted: '%{link} başarıyla düzeltildi'
+      article_busted: 'Article #%{article} was successfully busted'
+      user_busted: 'User #%{user} was successfully busted'
+      link_busted: '%{link} was successfully busted'
     users_controller:
-      exported: Veriler %{receiver} adresine aktarıldı. İşlem kısa süre içinde tamamlanacak.
-      email_fail: E-posta gönderilemedi!
-      email_sent: E-posta gönderildi!
-      verify_sent: Doğrulama e-postası gönderildi!
-      full_delete_html: '@%{user} (e-posta: %{email}, kullanıcı_id: %{id}) tamamen silindi. Eğer bu bir GDPR silme işlemiyse, onları Mailchimp ve Google Analytics'ten silin ve %{the_page} üzerinde onaylayın.'
-      no_email: e-posta yok
-      parameter_missing: Hem konu hem de içerik gereklidir.
-      role_removed: 'Kullanıcıdan %{role} rolü başarıyla kaldırıldı!'
-      identity_removed: '%{provider} kimliği başarıyla silindi ve yedeklendi.'
-      the_page: sayfa
-      banished: Bu kullanıcı arka planda sürgün ediliyor. İşlem yakında tamamlanacak.
-      unlocked: Kullanıcı hesabı kilidi açıldı!
-      unpublished: Gönderiler arka planda yayından kaldırılıyor. İşlem yakında tamamlanacak.
-      updated: Kullanıcı güncellendi
-      updated_json: Başarılı! %{username} güncellendi.
-      credits_added: Krediler eklendi!
-      credits_removed: Krediler kaldırıldı.
+      exported: Data exported to the %{receiver}. The job will complete momentarily.
+      email_fail: Email failed to send!
+      email_sent: Email sent!
+      verify_sent: Verification email sent!
+      full_delete_html: '@%{user} (email: %{email}, user_id: %{id}) has been fully deleted. If this is a GDPR delete, delete them from Mailchimp & Google Analytics and confirm on %{the_page}.'
+      no_email: no email
+      parameter_missing: Both subject and body are required!
+      role_removed: 'Role: %{role} has been successfully removed from the user!'
+      identity_removed: The %{provider} identity was successfully deleted and backed up.
+      the_page: the page
+      banished: This user is being banished in the background. The job will complete soon.
+      unlocked: Unlocked User account!
+      unpublished: Posts are being unpublished in the background. The job will complete soon.
+      updated: User has been updated
+      updated_json: Success! %{username} has been updated.
+      credits_added: Credits have been added!
+      credits_removed: Credits have been removed.
     welcome_controller:
       thread_content: |
         ---
-        title: Hoş Geldiniz İletisi - v0
+        title: Welcome Thread - v0
         published: false
-        description: Kendinizi topluluğa tanıtın!
-        tags: hoşgeldiniz
+        description: Introduce yourself to the community!
+        tags: welcome
         ---
 
-        Merhaba! %{community} topluluğuna hoş geldiniz!
+        Hey there! Welcome to %{community}!
 
-        ![İNTERNETE HOŞ GELDİNİZ](https://slack-imgs.com/?c=1&url=http%3A%2F%2Fmedia0.giphy.com%2Fmedia%2FzhbrTTpmSCYog%2Fgiphy-downsized.gif)
+        ![WELCOME TO THE INTERNET](https://slack-imgs.com/?c=1&url=http%3A%2F%2Fmedia0.giphy.com%2Fmedia%2FzhbrTTpmSCYog%2Fgiphy-downsized.gif)
 
-        Kendinizi topluluğa tanıtmak için aşağıya bir yorum bırakın!✌️
+        Leave a comment below to introduce yourself to the community!✌️
