--- a/config/locales/views/reactions/tr.yml
+++ b/config/locales/views/reactions/tr.yml
@@ -7,8 +7,8 @@ tr:
         like: Beğen
         readinglist: Okuma listesi
         thinking: Düşünüyorum
-        thumbsup: Beğen
-        thumbsdown: Beğenme
+        thumbsup: Öne çıkar
+        thumbsdown: Geri bırak
         unicorn: Unicorn
         vomit: Bayrak
         lightbulb: Işık fikri
