--- a/config/locales/controllers/admin/tr.yml
+++ b/config/locales/controllers/admin/tr.yml
@@ -2,151 +2,151 @@
 tr:
   admin:
     articles_controller:
-      saved: Article saved!
-      pinned: Article Pinned!
-      unpinned: Article Unpinned!
+      saved: Makale kaydedildi!
+      pinned: Makale Sabitlendi!
+      unpinned: Makale Sabitleme Kaldırıldı!
     badge_achievements_controller:
-      deleted: Badge achievement has been deleted!
-      rewarded: Badges are being rewarded. The task will finish shortly.
-      congrats: Congrats!
-      award: Please choose a badge to award
-      wrong: Something went wrong.
+      deleted: Rozet başarısı silindi!
+      rewarded: Rozetler ödüllendiriliyor. Görev kısa süre içinde tamamlanacak.
+      congrats: Tebrikler!
+      award: Ödüllendirmek için bir rozet seçin
+      wrong: Bir şeyler ters gitti.
     badges_controller:
-      created: Badge has been created!
-      updated: Badge has been updated!
+      created: Rozet oluşturuldu!
+      updated: Rozet güncellendi!
     broadcasts_controller:
-      created: Broadcast has been created!
-      deleted: Broadcast has been deleted!
-      updated: Broadcast has been updated!
-      wrong: Something went wrong with deleting the broadcast.
+      created: Yayın oluşturuldu!
+      deleted: Yayın silindi!
+      updated: Yayın güncellendi!
+      wrong: Yayını silmeyle ilgili bir şeyler ters gitti.
     consumer_apps_controller:
-      created: '%{app} has been created!'
-      deleted: '%{app} has been deleted!'
-      updated: '%{app} has been updated!'
-      wrong: Something went wrong with deleting %{app}.
+      created: '%{app} oluşturuldu!'
+      deleted: '%{app} silindi!'
+      updated: '%{app} güncellendi!'
+      wrong: '%{app} silmeyle ilgili bir şeyler ters gitti.'
     display_ads_controller:
-      created: Display Ad has been created!
-      deleted: Display Ad has been deleted!
-      updated: Display Ad has been updated!
-      wrong: Something went wrong with deleting the Display Ad.
+      created: Görüntüleme Reklamı oluşturuldu!
+      deleted: Görüntüleme Reklamı silindi!
+      updated: Görüntüleme Reklamı güncellendi!
+      wrong: Görüntüleme Reklamını silmeyle ilgili bir şeyler ters gitti.
     gdpr_delete_requests_controller:
-      deleted: Successfully marked as deleted
+      deleted: Başarıyla silindi olarak işaretlendi
     extensions_controller:
-      update_success: Extensions have been updated.
+      update_success: Uzantılar güncellendi.
     html_variants_controller:
       fork: '%{name} FORK-%{rand}'
-      created: HTML Variant has been created!
-      deleted: HTML Variant has been deleted!
-      updated: HTML Variant has been updated!
-      wrong: Something went wrong with deleting the HTML Variant.
+      created: HTML Varyantı oluşturuldu!
+      deleted: HTML Varyantı silindi!
+      updated: HTML Varyantı güncellendi!
+      wrong: HTML Varyantını silmeyle ilgili bir şeyler ters gitti.
     invitations_controller:
-      duplicate: 'Invitation was not sent. There is already a registered user with the email: %{email}'
-      create_success: The invite has been sent to the user's email.
-      destroy_success: Invite cancelled for %{email}.
-      resend_success: Invite resent to %{email}.
+      duplicate: 'Davetiye gönderilmedi. Zaten %{email} e-postası olan kayıtlı bir kullanıcı var.'
+      create_success: Davetiye, kullanıcının e-postasına gönderildi.
+      destroy_success: '%{email} için davet iptal edildi.'
+      resend_success: '%{email} adresine davetiye yeniden gönderildi.'
     listing_categories_controller:
-      created: Listing Category has been created!
-      updated: Listing Category has been updated!
-      deleted: Listing Category has been deleted!
+      created: Liste Kategorisi oluşturuldu!
+      updated: Liste Kategorisi güncellendi!
+      deleted: Liste Kategorisi silindi!
     listings_controller:
-      updated: Listing updated successfully
-      destroyed: "'%{title}' was destroyed successfully"
-      no_credit: Not enough available credits
+      updated: Liste başarıyla güncellendi
+      destroyed: "'%{title}' başarıyla yok edildi"
+      no_credit: Yeterli kredi yok
     mods_controller:
-      trusted: '%{username} now has a Trusted role!'
+      trusted: '%{username} artık Güvenilir bir role sahip!'
     navigation_links_controller:
-      deleted: Navigation Link %{link} deleted
-      created: 'Successfully created navigation link: %{link}'
-      updated: 'Successfully updated navigation link: %{link}'
+      deleted: Navigasyon Bağlantısı %{link} silindi
+      created: 'Başarıyla oluşturulan navigasyon bağlantısı: %{link}'
+      updated: 'Başarıyla güncellenen navigasyon bağlantısı: %{link}'
     organization_memberships_controller:
-      not_exist: 'Organization #%{org_id} does not exist.'
-      wrong: Something went wrong with removing the user from %{org}
-      added: User was successfully added to %{org}
-      removed: User was successfully removed from %{org}
-      updated: User was successfully updated to %{type}
+      not_exist: 'Organizasyasyon #%{org_id} mevcut değil.'
+      wrong: Kullanıcının %{org} organizasyonundan kaldırılmasıyla ilgili bir şeyler ters gitti.
+      added: Kullanıcı başarıyla %{org} organizasyonuna eklendi.
+      removed: Kullanıcı başarıyla %{org} organizasyonundan kaldırıldı.
+      updated: Kullanıcı başarıyla %{type} olarak güncellendi.
     organizations_controller:
-      credit_updated: Successfully updated credits
+      credit_updated: Krediler başarıyla güncellendi.
     pages_controller:
-      updated: Page has been successfully updated.
-      created: Page has been successfully created.
-      deleted: Page has been successfully deleted.
+      updated: Sayfa başarıyla güncellendi.
+      created: Sayfa başarıyla oluşturuldu.
+      deleted: Sayfa başarıyla silindi.
       code_of_conduct:
-        title: Code of Conduct
-        description: A page that describes how to behave on this platform
+        title: Davranış Kuralları
+        description: Bu platformda nasıl davranılması gerektiğini açıklayan bir sayfa
       privacy_policy:
-        title: Privacy Policy
-        description: A page that describes the privacy policy
+        title: Gizlilik Politikası
+        description: Gizlilik politikasını açıklayan bir sayfa
       terms_of_use:
-        title: Terms of Use
-        description: A page that describes the terms of use for the application
+        title: Kullanım Şartları
+        description: Uygulamanın kullanım şartlarını açıklayan bir sayfa
     podcasts_controller:
-      new_owner_added: New owner added!
-      no_such_user: No such user
-      scheduled: "Podcast's episodes fetching was scheduled (%{title}, #%{id})"
-      updated: Podcast updated
+      new_owner_added: Yeni sahip eklendi!
+      no_such_user: Böyle bir kullanıcı yok
+      scheduled: "Podcast'in bölümleri alınması planlandı (%{title}, #%{id})"
+      updated: Podcast güncellendi
     profile_field_groups_controller:
-      deleted: Group %{group} deleted
-      updated: Group %{group} updated
-      created: 'Successfully created group: %{group}'
+      deleted: Grup %{group} silindi
+      updated: Grup %{group} güncellendi
+      created: 'Başarıyla oluşturulan grup: %{group}'
     profile_fields_controller:
-      created: Profile field %{field} created
-      deleted: Profile field %{field} deleted
-      updated: Profile field %{field} updated
+      created: Profil alanı %{field} oluşturuldu
+      deleted: Profil alanı %{field} silindi
+      updated: Profil alanı %{field} güncellendi
     response_templates_controller:
-      saved: 'Response Template: "%{title}" saved successfully.'
-      updated: The response template "%{title}" was updated.
-      deleted: The response template "%{title}" was deleted.
+      saved: 'Yanıt Şablonu: "%{title}" başarıyla kaydedildi.'
+      updated: Yanıt şablonu "%{title}" güncellendi.
+      deleted: Yanıt şablonu "%{title}" silindi.
     secrets_controller:
-      not_in_vault: Not In Vault
-      updated: Secret %{key} was successfully updated in Vault.
+      not_in_vault: Kasada Değil
+      updated: '%{key} anahtarı, Kasada başarıyla güncellendi.'
       value: '%{first8}******'
     settings_controller:
-      confirmation: My username is @%{username} and this action is 100% safe and appropriate.
+      confirmation: Kullanıcı adım @%{username} ve bu işlem %100 güvenli ve uygundur.
     spaces_controller:
-      update_success: Space has been updated.
+      update_success: Mekan güncellendi.
     tags:
       moderators_controller:
-        not_found: 'User ID #%{user_id} was not found'
-        not_found_or: 'User ID #%{user_id} was not found, or their account has errors: %{errors}'
-        removed: '@%{username} - ID #%{user_id} was removed as a tag moderator.'
-        added: '%{username} was added as a tag moderator!'
+        not_found: 'Kullanıcı ID #%{user_id} bulunamadı'
+        not_found_or: 'Kullanıcı ID #%{user_id} bulunamadı veya hesaplarında hatalar var: %{errors}'
+        removed: '@%{username} - ID #%{user_id} etiket moderatörü olarak kaldırıldı.'
+        added: '%{username} etiket moderatörü olarak eklendi!'
     tags_controller:
-      created: '%{tag_name} has been created!'
-      updated: '%{tag_name} tag successfully updated!'
-      update_fail: 'The tag update failed: %{errors}'
+      created: '%{tag_name} oluşturuldu!'
+      updated: '%{tag_name} etiketi başarıyla güncellendi!'
+      update_fail: 'Etiket güncellemesi başarısız oldu: %{errors}'
     tools_controller:
-      article_busted: 'Article #%{article} was successfully busted'
-      user_busted: 'User #%{user} was successfully busted'
-      link_busted: '%{link} was successfully busted'
+      article_busted: 'Makale #%{article} başarıyla düzeltildi'
+      user_busted: 'Kullanıcı #%{user} başarıyla düzeltildi'
+      link_busted: '%{link} başarıyla düzeltildi'
     users_controller:
-      exported: Data exported to the %{receiver}. The job will complete momentarily.
-      email_fail: Email failed to send!
-      email_sent: Email sent!
-      verify_sent: Verification email sent!
-      full_delete_html: '@%{user} (email: %{email}, user_id: %{id}) has been fully deleted. If this is a GDPR delete, delete them from Mailchimp & Google Analytics and confirm on %{the_page}.'
-      no_email: no email
-      parameter_missing: Both subject and body are required!
-      role_removed: 'Role: %{role} has been successfully removed from the user!'
-      identity_removed: The %{provider} identity was successfully deleted and backed up.
-      the_page: the page
-      banished: This user is being banished in the background. The job will complete soon.
-      unlocked: Unlocked User account!
-      unpublished: Posts are being unpublished in the background. The job will complete soon.
-      updated: User has been updated
-      updated_json: Success! %{username} has been updated.
-      credits_added: Credits have been added!
-      credits_removed: Credits have been removed.
+      exported: Veriler %{receiver} adresine aktarıldı. İşlem kısa süre içinde tamamlanacak.
+      email_fail: E-posta gönderilemedi!
+      email_sent: E-posta gönderildi!
+      verify_sent: Doğrulama e-postası gönderildi!
+      full_delete_html: "'@%{user} (e-posta: %{email}, kullanıcı_id: %{id}) tamamen silindi. Eğer bu bir GDPR silme işlemiyse, onları Mailchimp ve Google Analytics'ten silin ve %{the_page} üzerinde onaylayın.'"
+      no_email: e-posta yok
+      parameter_missing: Hem konu hem de içerik gereklidir.
+      role_removed: 'Kullanıcıdan %{role} rolü başarıyla kaldırıldı!'
+      identity_removed: '%{provider} kimliği başarıyla silindi ve yedeklendi.'
+      the_page: sayfa
+      banished: Bu kullanıcı arka planda sürgün ediliyor. İşlem yakında tamamlanacak.
+      unlocked: Kullanıcı hesabı kilidi açıldı!
+      unpublished: Gönderiler arka planda yayından kaldırılıyor. İşlem yakında tamamlanacak.
+      updated: Kullanıcı güncellendi
+      updated_json: Başarılı! %{username} güncellendi.
+      credits_added: Krediler eklendi!
+      credits_removed: Krediler kaldırıldı.
     welcome_controller:
       thread_content: |
         ---
-        title: Welcome Thread - v0
+        title: Hoş Geldiniz İletisi - v0
         published: false
-        description: Introduce yourself to the community!
-        tags: welcome
+        description: Kendinizi topluluğa tanıtın!
+        tags: hoşgeldiniz
         ---
 
-        Hey there! Welcome to %{community}!
+        Merhaba! %{community} topluluğuna hoş geldiniz!
 
-        ![WELCOME TO THE INTERNET](https://slack-imgs.com/?c=1&url=http%3A%2F%2Fmedia0.giphy.com%2Fmedia%2FzhbrTTpmSCYog%2Fgiphy-downsized.gif)
+        ![İNTERNETE HOŞ GELDİNİZ](https://slack-imgs.com/?c=1&url=http%3A%2F%2Fmedia0.giphy.com%2Fmedia%2FzhbrTTpmSCYog%2Fgiphy-downsized.gif)
 
-        Leave a comment below to introduce yourself to the community!✌️
+        Kendinizi topluluğa tanıtmak için aşağıya bir yorum bırakın!✌️
