--- a/config/locales/views/podcasts/tr.yml
+++ b/config/locales/views/podcasts/tr.yml
@@ -4,7 +4,7 @@ tr:
     podcasts:
       meta:
         title: Podcast'ler
-        description: '%{member} için teknik podcast'leri keşfedin'
+        description: "%{member} için teknik podcast'leri keşfedin"
         og:
           title: '%{community} üzerindeki Podcastler'
       browse: Göz atın
